NMEA/dev_ws/log/build_2024-01-14_23-54-25/nmea/stderr.log
  File "/home/user/Desktop/vilab/dev_ws/install/nmea/lib/python3.8/site-packages/nmea/nmea_subscriber.py", line 6
    from nmea
            ^
SyntaxError: invalid syntax

